--- a/src/app/master/genders/genders.component.html
+++ b/src/app/master/genders/genders.component.html
@@ -1,2 +1,63 @@
-<p>genders works!</p>
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae aperiam beatae maxime quam sit magnam maiores. Illum rem, eveniet reprehenderit necessitatibus qui atque ut, quae officiis quam nostrum architecto veritatis non alias culpa corrupti labore esse sequi vitae explicabo neque pariatur perferendis dolorem, deleniti aut? Quidem iste nam soluta quod at est. Earum, in eius unde ut temporibus cumque tenetur perspiciatis fugit, recusandae eligendi aut vero neque necessitatibus! Debitis, velit doloremque. Iste, doloremque autem. Eius beatae aperiam quidem numquam veniam illum deleniti quam in recusandae iste perferendis nostrum provident maxime, facilis nihil harum quia. Officia fugiat in doloremque explicabo officiis non perferendis animi alias aut nisi hic ratione porro corporis sequi iure repellat magnam repudiandae, ipsum ipsa. Similique deserunt deleniti eveniet nihil ratione, saepe nobis iusto quod odio reprehenderit libero alias placeat perspiciatis ducimus tempora nam temporibus delectus officiis culpa, ad fugiat natus. Quis libero consequatur sapiente consequuntur. Placeat quibusdam commodi corporis a minima quisquam. Perferendis corrupti, ullam veniam aliquam iusto accusamus repellat accusantium iste quae pariatur laudantium! Ipsam architecto enim, repellendus necessitatibus cupiditate perspiciatis dicta doloribus, reprehenderit ipsum eaque non sed minima officia numquam quos. Enim consequatur quibusdam, ea beatae tempora minima, ipsum perferendis praesentium, omnis temporibus quisquam animi!</p>
+<div class="app-page-title">
+    <div class="page-title-wrapper">
+        <div class="page-title-heading">
+            <div>Genders</div>
+        </div>
+        <div class="page-title-actions">
+            <label class="text-danger">Count: {{ result.length }}</label>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-body">
+
+                <form [formGroup]="formdata" (ngSubmit)="submit(formdata.value)" class="">
+                    <div class="position-relative form-group">
+                        <label>Gender<span class="text-danger">*</span></label>
+                        <input placeholder="Gender" type="text"formControlName="name"  class="form-control">
+                        <em class="error text-danger small" *ngIf="formdata.controls.name.touched && formdata.controls.name.invalid">Please enter gender</em>
+                    </div>
+
+                    <input type="submit" [disabled]="formdata.invalid" value="Save" class="mt-1 btn btn-primary">
+                </form>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="col-lg-12 mt-2">
+        <div class="card">
+            <div class="card-body">
+                <table class="table table-hover table-striped table-bordered">
+                    <thead class="text-center">
+                        <tr>
+                            <th style="width: 150px;">Action</th>
+                            <th style="width: 80px;">No</th>
+                            <th>Title</th>
+                         
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let data of result; let i=index">
+                            <td class="text-center">
+                                
+                                <button (click)="edit(data.id)" class="mb-2 mr-2 btn-icon btn-icon-only btn-pill btn btn-primary"><i class="pe-7s-tools btn-icon-wrapper"> </i></button>
+                                <button (click)="delete(data.id)" class="mb-2 mr-2 btn-icon btn-icon-only btn-pill btn btn-danger"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
+
+                            </td>
+                            <td class="text-right">{{i+1}}</td>
+                            <td>{{data.name}}</td>
+                          
+                        </tr>
+                    </tbody>
+
+                </table>
+
+
+            </div>
+        </div>
+    </div>
+</div>
