--- a/src/app/master/users/users.component.html
+++ b/src/app/master/users/users.component.html
@@ -4,7 +4,7 @@
             <div>Users</div>
         </div>
         <div class="page-title-actions">
-            <label class="text-danger">Count:10</label>
+            <label class="text-danger">Count: {{ result.length }}</label>
         </div>
     </div>
 </div>
@@ -64,7 +64,7 @@
                                 <button (click)="delete(data.id)" class="mb-2 mr-2 btn-icon btn-icon-only btn-pill btn btn-danger"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
 
                             </td>
-                            <td class="text-right">{{i+1}}</td>
+                            <td>{{i+1}}</td>
                             <td>{{data.name}}</td>
                             <td>{{data.username}}</td>
                             <td>{{data.password}}</td>
