--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -60,7 +60,25 @@
                                 <i class="metismenu-icon">
                                 </i>Genders
                             </a>
-                        </li>   
+                        </li>
+                        <li>
+                            <a routerLink="/master/paymentmodes" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Paymentmode
+                            </a>
+                        </li>
+                        <li>
+                            <a routerLink="/master/modules" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Modules
+                            </a>
+                        </li> 
+                        <li>
+                            <a routerLink="/master/menus" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Menus
+                            </a>
+                        </li>           
                     </ul>
                 </li>
             </ul>
