--- a/src/app/master/paymentmodes/paymentmodes.component.html
+++ b/src/app/master/paymentmodes/paymentmodes.component.html
@@ -1,10 +1,10 @@
 <div class="app-page-title">
     <div class="page-title-wrapper">
         <div class="page-title-heading">
-            <div>Genders</div>
+            <div>Payment Modes</div>
         </div>
         <div class="page-title-actions">
-            <label class="text-danger">Count: {{ result.length }}</label>
+            <label class="text-danger" *ngIf="result">Count: {{ result.length }}</label>
         </div>
     </div>
 </div>
@@ -16,9 +16,9 @@
 
                 <form [formGroup]="formdata" (ngSubmit)="submit(formdata.value)" class="">
                     <div class="position-relative form-group">
-                        <label>Genders<span class="text-danger">*</span></label>
-                        <input placeholder="Gender" type="text"formControlName="name"  class="form-control">
-                        <em class="error text-danger small" *ngIf="formdata.controls.name.touched && formdata.controls.name.invalid">Please enter title</em>
+                        <label>Title<span class="text-danger">*</span></label>
+                        <input placeholder="payment modes" type="text"formControlName="name"  class="form-control">
+                        <em class="error text-danger small" *ngIf="formdata.controls.name.touched && formdata.controls.name.invalid">Please enter payment mode</em>
                     </div>
 
                     <input type="submit" [disabled]="formdata.invalid" value="Save" class="mt-1 btn btn-primary">
