--- a/src/app/master/menus/menus.component.html
+++ b/src/app/master/menus/menus.component.html
@@ -19,35 +19,48 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <label>Title<span class="text-danger">*</span></label>
-                            <input placeholder="title" type="text"formControlName="title"  class="form-control">
-                            <em class="error text-danger small" *ngIf="formdata.controls.title.touched && formdata.controls.title.invalid">Please enter title</em>
+                                <input placeholder="title" type="text" formControlName="title" class="form-control">
+                                <em class="error text-danger small"
+                                    *ngIf="formdata.controls.title.touched && formdata.controls.title.invalid">Please
+                                    enter title</em>
                             </div>
-                        <div class="col-md-4">
-                            <label>Can have childs?<span class="text-danger">*</span></label>
-                        <input placeholder="can have child?" type="text"formControlName="canhavechilds"  class="form-control">
-                        <em class="error text-danger small" *ngIf="formdata.controls.canhavechilds.touched && formdata.controls.canhavechilds.invalid">Please enter child</em>
+                            <div class="col-md-4">
+                                <label>Can have childs?<span class="text-danger">*</span></label>
+                                <input placeholder="can have child?" type="text" formControlName="canhavechilds"
+                                    class="form-control">
+                                <em class="error text-danger small"
+                                    *ngIf="formdata.controls.canhavechilds.touched && formdata.controls.canhavechilds.invalid">Please
+                                    enter child</em>
+                            </div>
+                            <div class="col-md-4">
+                                <label>Menuid<span class="text-danger">*</span></label>
+                                <input placeholder="Menuid" type="text" formControlName="menuid" class="form-control">
+                                <em class="error text-danger small"
+                                    *ngIf="formdata.controls.menuid.touched && formdata.controls.menuid.invalid">Please
+                                    enter menuid</em>
+                            </div>
+                            <div class="col-md-4 mt-2">
+                                <label>Sr.No<span class="text-danger">*</span></label>
+                                <input placeholder="srno" type="number" formControlName="srno" class="form-control">
+                                <em class="error text-danger small"
+                                    *ngIf="formdata.controls.srno.touched && formdata.controls.srno.invalid">Please
+                                    enter srno</em>
+                            </div>
+                            <div class="col-md-4 mt-2">
+                                <label>Icon<span class="text-danger">*</span></label>
+                                <input placeholder="Icon" type="text" formControlName="icon" class="form-control">
+                                <em class="error text-danger small"
+                                    *ngIf="formdata.controls.icon.touched && formdata.controls.icon.invalid">Please
+                                    enter icon</em>
+                            </div>
+                            <div class="col-md-4 mt-2">
+                                <label>Link<span class="text-danger">*</span></label>
+                                <input placeholder="link" type="text" formControlName="link" class="form-control">
+                                <em class="error text-danger small"
+                                    *ngIf="formdata.controls.link.touched && formdata.controls.link.invalid">Please
+                                    enter link</em>
+                            </div>
                         </div>
-                        <div class="col-md-4">
-                            <label>Menuid<span class="text-danger">*</span></label>
-                        <input placeholder="Menuid" type="text"formControlName="menuid"  class="form-control">
-                        <em class="error text-danger small" *ngIf="formdata.controls.menuid.touched && formdata.controls.menuid.invalid">Please enter menuid</em>
-                        </div>
-                        <div class="col-md-4 mt-2">
-                            <label>Sr.No<span class="text-danger">*</span></label>
-                        <input placeholder="srno" type="text"formControlName="srno"  class="form-control">
-                        <em class="error text-danger small" *ngIf="formdata.controls.srno.touched && formdata.controls.srno.invalid">Please enter srno</em>
-                        </div>
-                        <div class="col-md-4 mt-2">
-                            <label>Icon<span class="text-danger">*</span></label>
-                        <input placeholder="Icon" type="text"formControlName="icon"  class="form-control">
-                        <em class="error text-danger small" *ngIf="formdata.controls.icon.touched && formdata.controls.icon.invalid">Please enter icon</em>
-                        </div>
-                        <div class="col-md-4 mt-2">
-                            <label>Link<span class="text-danger">*</span></label>
-                        <input placeholder="link" type="text"formControlName="link"  class="form-control">
-                        <em class="error text-danger small" *ngIf="formdata.controls.link.touched && formdata.controls.link.invalid">Please enter link</em>
-                        </div>
-                    </div>
                     </div>
 
                     <input type="submit" [disabled]="formdata.invalid" value="Save" class="mt-1 btn btn-primary">
@@ -71,26 +84,30 @@
                             <th>SrNo</th>
                             <th>Icon</th>
                             <th>Link</th>
-                         
+
                         </tr>
                     </thead>
                     <tbody>
                         <tr *ngFor="let data of result; let i=index" class="text-center">
                             <td class="text-center">
-                                
-                                <button (click)="edit(data.id)" class="mb-2 mr-2 btn-icon btn-icon-only btn-pill btn btn-primary"><i class="pe-7s-tools btn-icon-wrapper"> </i></button>
-                                <button (click)="delete(data.id)" class="mb-2 mr-2 btn-icon btn-icon-only btn-pill btn btn-danger"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
+
+                                <button (click)="edit(data.id)"
+                                    class="mb-2 mr-2 btn-icon btn-icon-only btn-pill btn btn-primary"><i
+                                        class="pe-7s-tools btn-icon-wrapper"> </i></button>
+                                <button (click)="delete(data.id)"
+                                    class="mb-2 mr-2 btn-icon btn-icon-only btn-pill btn btn-danger"><i
+                                        class="pe-7s-trash btn-icon-wrapper"> </i></button>
 
                             </td>
                             <td>{{i+1}}</td>
                             <td>{{data.title}}</td>
-                            <td>{{data.canhavechilds}}</td>                         
+                            <td>{{data.canhavechilds}}</td>
                             <td>{{data.menuid}}</td>
                             <td>{{data.srno}}</td>
                             <td>{{data.icon}}</td>
                             <td>{{data.link}}</td>
-                           
-                          
+
+
                         </tr>
                     </tbody>
 
@@ -101,5 +118,3 @@
         </div>
     </div>
 </div>
-
-
