--- a/src/app/master/titles/titles.component.html
+++ b/src/app/master/titles/titles.component.html
@@ -22,6 +22,7 @@
                     </div>
 
                     <input type="submit" [disabled]="formdata.invalid" value="Save" class="mt-1 btn btn-primary">
+                    <input type="reset" [disabled]="formdata.invalid" value="Cancel" class="mt-1 ml-2 btn btn-danger">
                 </form>
 
             </div>
@@ -32,7 +33,7 @@
         <div class="card">
             <div class="card-body">
                 <table class="table table-hover table-striped table-bordered">
-                    <thead class="text-center">
+                    <thead class="text-left">
                         <tr>
                             <th style="width: 150px;">Action</th>
                             <th style="width: 80px;">No</th>
@@ -44,8 +45,8 @@
                         <tr *ngFor="let data of result; let i=index">
                             <td class="text-center">
                                 
-                                <button (click)="edit(data.id)" class="mb-2 mr-2 btn-icon btn-icon-only btn-pill btn btn-primary"><i class="pe-7s-tools btn-icon-wrapper"> </i></button>
-                                <button (click)="delete(data.id)" class="mb-2 mr-2 btn-icon btn-icon-only btn-pill btn btn-danger"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
+                                <button (click)="edit(data.id)" class="mb-2 mr-2 btn-icon btn-icon-only btn-pill btn btn-primary"><i class="pe-7s-tools btn-icon-wrapper" data-bs-toggle="tooltip" title="Edit"> </i></button>
+                                <button (click)="delete(data.id)" class="mb-2 mr-2 btn-icon btn-icon-only btn-pill btn btn-danger"><i class="pe-7s-trash btn-icon-wrapper" data-bs-toggle="tooltip" title="Delete"> </i></button>
 
                             </td>
                             <td class="text-right">{{i+1}}</td>
