--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
+<div *ngIf="show" class="app-drawer-overlay animated fadeIn">
+    <div style="width:100%; height:100%;" class="loader-wrapper d-flex justify-content-center align-items-center">
+        <div class="loader">
+            <div class="square-spin">
+                <div></div>
+            </div>
+        </div>
+    </div>
+</div>
 <router-outlet></router-outlet>
