--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -78,7 +78,103 @@
                                 <i class="metismenu-icon">
                                 </i>Menus
                             </a>
-                        </li>           
+                        </li>
+                        <li>
+                            <a routerLink="/master/beds" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Beds
+                            </a>
+                        </li> 
+                        <li>
+                            <a routerLink="/master/bloodgroups" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Bloodgroups
+                            </a>
+                        </li>    
+                        <li>
+                            <a routerLink="/master/concessionauthorities" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Concessionauthorities
+                            </a>
+                        </li>    
+                        <li>
+                            <a routerLink="/master/configurations" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Configurations
+                            </a>
+                        </li>    
+                        <li>
+                            <a routerLink="/master/departments" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Departments
+                            </a>
+                        </li>    
+                        <li>
+                            <a routerLink="/master/ipdoptions" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Ipdoptions
+                            </a>
+                        </li>    
+                        <li>
+                            <a routerLink="/master/ipdservices" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Ipdservices
+                            </a>
+                        </li>    
+                        <li>
+                            <a routerLink="/master/labs" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Labs
+                            </a>
+                        </li>    
+                        <li>
+                            <a routerLink="/master/languages" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Languages
+                            </a>
+                        </li>    
+                        <li>
+                            <a routerLink="/master/nationalities" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Nationalities
+                            </a>
+                        </li>    
+                        <li>
+                            <a routerLink="/master/opdservices" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Opdservices
+                            </a>
+                        </li>    
+                        <li>
+                            <a routerLink="/master/relations" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Relations
+                            </a>
+                        </li>    
+                        <li>
+                            <a routerLink="/master/religions" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Religions
+                            </a>
+                        </li>    
+                        <li>
+                            <a routerLink="/master/rooms" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Rooms
+                            </a>
+                        </li>    
+                        <li>
+                            <a routerLink="/master/specializations" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Specializations
+                            </a>
+                        </li>    
+                        <li>
+                            <a routerLink="/master/usertypes" routerLinkActive="mm-active">
+                                <i class="metismenu-icon">
+                                </i>Usertypes
+                            </a>
+                        </li>                 
                     </ul>
                 </li>
             </ul>
