--- a/src/app/master/genders/genders.component.html
+++ b/src/app/master/genders/genders.component.html
@@ -4,7 +4,7 @@
             <div>Genders</div>
         </div>
         <div class="page-title-actions">
-            <label class="text-danger">Count: {{ result.length }}</label>
+            <label *ngIf="result" class="text-danger">Count: {{ result.length }}</label>
         </div>
     </div>
 </div>
