--- a/src/app/master/religions/religions.component.html
+++ b/src/app/master/religions/religions.component.html
@@ -4,7 +4,7 @@
       <div>Religion</div>
     </div>
     <div class="page-title-actions">
-      <label class="text-danger" *ngiF="result">Count: {{ result.length }}</label>
+      <label class="text-danger" *ngIf="result">Count: {{ result.length }}</label>
     </div>
   </div>
 </div>
