--- a/src/app/pharmacy/items/items.component.html
+++ b/src/app/pharmacy/items/items.component.html
@@ -1,7 +1,7 @@
 <div class="app-page-title">
     <div class="page-title-wrapper">
         <div class="page-title-heading">
-            <div>Menus</div>
+            <div>Items</div>
         </div>
         <div class="page-title-actions">
             <label class="text-danger" *ngIf="result">Count: {{ result.length }}</label>
@@ -13,44 +13,44 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-body">
-
                 <form [formGroup]="formdata" (ngSubmit)="submit(formdata.value)" class="">
                     <div class="position-relative form-group">
                         <div class="row">
                             <div class="col-md-4">
-                                <label>Title<span class="text-danger">*</span></label>
-                            <input placeholder="Title" type="text"formControlName="title"  class="form-control">
-                            <em class="error text-danger small" *ngIf="formdata.controls.title.touched && formdata.controls.title.invalid">Please enter title</em>
+                                <label>ITEM<span class="text-danger">*</span></label>
+                                <input placeholder="Title" type="text" formControlName="title" class="form-control">
+                                <em class="error text-danger small"
+                                    *ngIf="formdata.controls.title.touched && formdata.controls.title.invalid">Please
+                                    enter title</em>
                             </div>
-                        <div class="col-md-4">
-                            <label>Can have childs?<span class="text-danger">*</span></label><br>
-                            <label class="switch">
-                                <input formControlName="canhavechilds" type="checkbox">
-                                <span class="slider round"></span>
-                              </label>
-                        
-                        </div>
-                        <div class="col-md-4">
+
+                            <!-- <div class="col-md-4">
                             <label>Parent Menu<span class="text-danger">*</span></label>
                             <select class="form-control" formControlName="menuid">
                                 <option value="0">Menu</option>
                                 <option *ngFor="let menu of parentMenus | paginate: { itemsPerPage:itemsPerPage , currentPage: p };" value="{{ menu.id }}">{{ menu.title }}</option>
                             </select>
+                        </div> -->
+                            <div class="col-md-4">
+                                <label>Medicine Type<span class="text-danger">*</span></label>
+                                <select class="form-control" formControlName="mtype">
+                                    <option value="0">Capsule</option>
+                                    <option
+                                        *ngFor="let item of parentitems | paginate: { itemsPerPage:itemsPerPage , currentPage: p };"
+                                        value="{{ item.id }}">{{ item.title }}</option>
+                                </select>
+                            </div>
+
+                            <div class="col-md-4 ">
+                                <label>Sr.No<span class="text-danger">*</span></label>
+                                <input placeholder="SrNo" type="text" formControlName="srno" class="form-control">
+                                <em class="error text-danger small"
+                                    *ngIf="formdata.controls.srno.touched && formdata.controls.srno.invalid">Please
+                                    enter srno</em>
+                            </div>
+
+
                         </div>
-                        <div class="col-md-4 mt-2">
-                            <label>Sr.No<span class="text-danger">*</span></label>
-                        <input placeholder="SrNo" type="text"formControlName="srno"  class="form-control">
-                        <em class="error text-danger small" *ngIf="formdata.controls.srno.touched && formdata.controls.srno.invalid">Please enter srno</em>
-                        </div>
-                        <div class="col-md-4 mt-2">
-                            <label>Icon</label>
-                        <input placeholder="Icon" type="text"formControlName="icon"  class="form-control">
-                        </div>
-                        <div class="col-md-4 mt-2">
-                            <label>Link</label>
-                        <input placeholder="Link" type="text"formControlName="link"  class="form-control">
-                        </div>
-                    </div>
                     </div>
 
                     <input type="submit" [disabled]="formdata.invalid" value="Save" class="mt-1 btn btn-primary">
@@ -63,19 +63,7 @@
     <div class="col-lg-12 mt-2">
         <div class="card">
             <div class="card-body">
-                <ul class="mb-1 pl-3 pb-2">
-                    <li *ngFor="let data of parentMenus;">
-                      <span><i class="{{ data.icon }} ic-w mx-1"></i>{{ data.title }} 
-                        <a class="btn btn-xs btn-primary" (click)="edit(data.id)"><i class="fas fa-edit"  data-bs-toggle="tooltip" title="Edit"></i></a>
-                        <a class="btn btn-xs btn-danger ml-2" (click)="delete(data.id)"><i class="fas fa-trash"  data-bs-toggle="tooltip" title="Delete"></i></a></span>
-                      <ul class="nested">
-                        <li style="margin:10px" *ngFor="let menu of result | menufilter:data"><i class="{{ menu.icon }} ic-w mr-1"></i>{{ menu.title }} 
-                            <a class="btn btn-xs btn-primary" (click)="edit(menu.id)"  data-bs-toggle="tooltip" title="Edit"><i class="fas fa-edit"></i></a>
-                            <a class="btn btn-xs btn-danger ml-2" (click)="delete(menu.id)"  data-bs-toggle="tooltip" title="Delete"><i class="fas fa-trash"></i></a>
-                        </li>                        
-                      </ul>
-                    </li>
-                  </ul>
+
             </div>
             <div>
                 <pagination-controls (pageChange)="p = $event"></pagination-controls>
@@ -126,5 +114,3 @@
         </div>
     </div> -->
 </div>
-
-
